[package]
name = "kali-kalihim-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
axum = "0.7.2"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "time", "uuid"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde"] }
serde = "1.0.193"
serde_json = "1.0.108"
anyhow = "1.0.75"
dotenv = "0.15.0"

[profile.release]
lto = true
